Fix alignment of social links

--- a/assets/styles/site-media.css
+++ b/assets/styles/site-media.css
@@ -31,7 +31,7 @@
 	}
 }
 
-@media (max-width: 400px)
+@media (max-width: 420px)
 {
 	.site-header-layout
 	{
