--- a/assets/styles/site-social.css
+++ b/assets/styles/site-social.css
@@ -2,28 +2,38 @@
 {
     margin-left:auto;
     display:flex;
+    flex-direction:row;
     justify-content:center;
 }
 
 .social-img
 {
-    display:absolute;
-    width:1em;
-    height:1em;
-    margin:0.5em;
+    width:1rem;
+    position:absolute;
+    left:50%;
+    top:50%;
+    transform: 
+        translateY(-50%)
+        translateX(-50%);
 }
 
 .social-link
 {
+    position:relative;
     display:inline-block;
     background-color:rgba(255,255,255,0.0);
-    height:2em;
-    width:2em;
-    border-radius: 1em;
+    height:2rem;
+    width:2rem;
+    border-radius: 1rem;
     transition: all 0.2s ease-out;
 }
 
 .social-link:hover
 {
     background-color:rgba(255,255,255,0.2);
+}
+
+.site-header-social a
+{
+    display:flex;
 }
